Closed Bug 591526 Opened 14 years ago Closed 14 years ago

JM: Win64 build failure--no define for ArgReg2

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dmandelin, Assigned: m_kato)

References

Details

Attachments

(1 file)

c:/sources/jaegermonkey/js/src/methodjit/MonoIC.cpp(499) : error C2039: 'ArgReg2' : is not a member of 'js::mjit::Registers'
        c:\sources\jaegermonkey\js\src\methodjit/MachineRegs.h(50) : see declaration of 'js::mjit::Registers'
Due to bug 587698 landing (backed out).
Attached patch fixSplinter Review
Assignee: general → m_kato
Comment on attachment 472954 [details] [diff] [review]
fix

Since bug 587698 is landed, build break is again.
Attachment #472954 - Flags: review?(dvander)
Attachment #472954 - Flags: review?(dvander) → review+
http://hg.mozilla.org/tracemonkey/rev/f5f47e8fbc15
Whiteboard: fixed-in-tracemonkey
already into m-c
http://hg.mozilla.org/mozilla-central/rev/f5f47e8fbc15
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-tracemonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: