Bug 591526 - JM: Win64 build failure--no define for ArgReg2. r=dvander